--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <title>Duplicity - Oxygen Not Included save file editor</title>
+  </head>
 
-<<<<<<< HEAD
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
@@ -9,21 +17,3 @@
     <div id="root"></div>
   <script type="text/javascript" src="/oni-duplicity/runtime~client.45549510d4c4e80f2dd6.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vendors~client.45549510d4c4e80f2dd6.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.45549510d4c4e80f2dd6.bundle.js"></script></body>
 </html>
-=======
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-  <title>Duplicity - Oxygen Not Included save file editor</title>
-</head>
-
-<body>
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-  <div id="root"></div>
-<script type="text/javascript" src="/oni-duplicity/runtime~client.8951a3da08d81fdbf141.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vendors~client.8951a3da08d81fdbf141.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.8951a3da08d81fdbf141.bundle.js"></script></body>
-
-</html>
->>>>>>> parent of bc8d560... Updates
